[package]
name = "loyalwolf"
version = "0.1.0"
authors = ["uramnoil <25810983+UramnOIL@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
env_logger = "0.9.0"
tonic = "0.5.2"
prost = "0.8"
tokio = { version = "1.11.0", features = ["macros", "rt-multi-thread"] }
tokio-stream = { version =  "0.1.7", features = ["net"] }
async-stream = "0.3.2"
once_cell = "1.8.0"
futures-core = "0.3.17"

[build-dependencies]
tonic-build = "0.5.2"